Rename "lampset" to "lamplist", since this is a better name for them.
It is anticipated that in the future, a true "lampset" will be supported, which is unsorted and
implemented via a bitmap.

--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -277,7 +277,7 @@ A4: Skull Drop Up, nosearch
 # Note that a lampset may contain only one lamp.  The lampset is the
 # unit of 'allocation' for a lamp effect.
 ##########################################################################
-[lampsets]
+[lamplists]
 Bonus X: 2X, 4X, 6X, 8X
 Skill: Skill 1, Skill 2, Skill 3, Skill 4, Skill 5
 Center: Center 1, Center 2, Center 3
