--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ Poor Design
 * Rewrite display effect module not to use malloc(), like leffs.
 * task_set_arg() still used in some places, inefficient.
 * Remove gendefines???
-* "Idle" functions aren't really idle...
+* "Idle" functions aren't really idle... see 'timing' branch
 * Sound/music management is extremely poor.
 * Teach gencallset to ignore code that isn't being compiled in.
 * sol_duty_state should default to off, for safety.  Could also:
@@ -45,7 +45,6 @@ tunable.
 * Switch levels/edges tests do not work.  In Progress.
 * Factory reset does not clear audits, high scores, etc.
 * Audits are only 16-bits, and can overflow rather easily.
-* bit_test_all_on() isn't right
 
 
 Compiler Changes
