--- a/TODO
+++ b/TODO
@@ -8,18 +8,13 @@ Poor Design
 * "Idle" functions aren't really idle... see 'timing' branch
 * Sound/music management is extremely poor.
 * Teach gencallset to ignore code that isn't being compiled in.
-* sol_duty_state should default to off, for safety.  Could also:
- - invert/encode it so identical ff/ff from runaway code doesn't
-   turn on the solenoid.
- - Take the timer mod some upper limit, to prevent exercising a coil
-   more than should ever be needed (i.e. slingshots).
+* Implement more specific coil drivers
 * Use the new bitmap functions to draw the switch matrix in test.
 * Replace FIF with something more intelligent.
 * Move printf and game state machine code out of the system page.
 
 
 Missing Feature
-* Generic slingshot/jet bumper drivers that work in every game.
 * Lamp power saver level
 * Abort after so many ball searches, or try another method (chase ball?)
 * Coin Door Ballsave
@@ -34,7 +29,6 @@ Bugs
 * When changing adjustments, 'confirmation' screen does not work. (True??)
 * Factory defaults should be different per country code.
 * Switch levels/edges tests do not work.  In Progress.
-* Audits are only 16-bits, and can overflow rather easily.
 * DCS sound bringup does not work well
 
 
