--- a/TODO
+++ b/TODO
@@ -8,11 +8,10 @@ Poor Design
 * "Idle" functions aren't really idle... see 'timing' branch
 * Sound/music management is extremely poor.
 * Teach gencallset to ignore code that isn't being compiled in.
-* Implement more specific coil drivers
 * Use the new bitmap functions to draw the switch matrix in test.
 * Replace FIF with something more intelligent.
 * Move printf and game state machine code out of the system page.
-
+* Deal with common page getting full.
 
 Missing Feature
 * Lamp power saver level
