Remove the Fliptronic coil numbers from coil test on WPC-89 games.
Also fix reference to Fliptronic switch number that should reference
the regular switch matrix instead.

--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -26,7 +26,7 @@ WPC95: No
 # Include standard definitions that apply to all WPC games.
 # This will set some defaults for things you leave out here.
 ##########################################################################
-include platform/wpc/wpc.md
+include platform/wpc/wpc89.md
 
 ##########################################################################
 # Use 'define' to emit a plain #define for anything not covered by
