Misc. WCS updates.

--- a/TODO
+++ b/TODO
@@ -23,6 +23,7 @@ Missing Feature
 * Lamp strobing, like newer Sterns
 * deff_nice
 * Flasher allocation for lamp effects
+* Add lock magnet/Magna-Goalie/goalie driver
 
 
 Bugs
