Explain asterisks in the machine README.

--- a/machine/README
+++ b/machine/README
@@ -8,8 +8,8 @@ DCS: No
 WPC95: No
 PIC: No
 --------------------------------------------
-Doctor Dude*
-Funhouse*
+Doctor Dude (most are System 11, though; all have System 11 sound)
+Funhouse (most have System 11 sound)
 Harley Davidson
 The Machine: Bride of Pinbot
 
@@ -28,8 +28,8 @@ Hot Shots (Basketball game)
 
 Fliptronics: Yes
 --------------------------------------------
-Party Zone*
-Addams Family**
+Party Zone (only some have Fliptronics)
+Addams Family (can use Fliptronics I or II)
 The Getaway
 Black Rose
 Fish Tales
@@ -65,7 +65,7 @@ Theatre of Magic
 No Fear
 Indianapolis 500
 Johnny Mnemonic
-Jackbot*
+Jackbot (some of these were WPC-95)
 Who Dunnit
 
 
