--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -144,7 +144,7 @@ define MACHINE_START_BALL_MUSIC MUS_T2_PLUNGER
 11: Right Flipper, button, intest, c_decl(sw_right_button)
 12: Left Flipper, button, intest, c_decl(sw_left_button)
 13: Start Button, start-button, intest
-14: Plumb Bob Tilt, c_decl(sw_tilt), tilt, ingame, noplay
+14: Plumb Bob Tilt, c_decl(sw_tilt), tilt, ingame, noplay, cabinet
 15: Trough Left, c_decl(sw_trough), noplay
 16: Trough Center, c_decl(sw_trough), noplay
 17: Trough Right, c_decl(sw_trough), noplay
@@ -159,7 +159,7 @@ define MACHINE_START_BALL_MUSIC MUS_T2_PLUNGER
 32: Gun Mark
 33: Gun Home
 # TODO : it *must* be named this, even though T2 prefers 'grip trigger'
-34: Launch Button, launch-button, noplay
+34: Launch Button, cabinet, launch-button, noplay
 36: Standup Mid. Left, lamp(LM_CENTER_1)
 37: Standup Mid. Center, lamp(LM_CENTER_2)
 38: Standup Mid. Right, lamp(LM_CENTER_3)
