--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -66,7 +66,7 @@ define MACHINE_START_BALL_MUSIC MUS_T2_PLUNGER
 24: Right Return Lane
 25: Super Jackpot
 26: Load Gun
-27: Extra Ball
+27: Extra Ball, extra-ball
 28: Load For Jackpot
 31: Skill 1
 32: Skill 2
